syntax = "proto3";

package client;

import "core/core.proto";

option java_package = "com.windchat.proto.client";
option java_outer_classname = "ImStcMessageProto";

/**
 * 接口名<action_name>：
 * 		im.stc.message
 *
 * 功能描述：
 * 		客户端拉取站点消息，站点下发的消息<U2,Group>
 *
 */
service ImStcMessageService {
    rpc message(ImStcMessageRequest) returns(ImStcMessageResponse);
}

message ImStcMessageRequest {
	repeated MsgWithPointer list =1;		//客户端接受的消息列表
}

message MsgWithPointer{
	int64 pointer = 1;								//消息游标
	core.MsgType type = 2;							//消息类型
	core.MsgStatus status = 3;						//消息状态，是否已送达

	//此字段已经废除
//	core.MsgFinish finish = 4;						//消息结束字段

    core.MsgText text = 5;							//二人文本消息
    core.MsgSecretText secretText = 6;				//二人加密文本消息
    core.GroupText groupText = 7;					//群文本消息
    core.GroupSecretText groupSecretText = 8;		//加密群文本消息
    core.MsgImage image = 9;							//二人图片消息
	core.MsgSecretImage secretImage = 10;			//加密二人图片消息
	core.GroupImage groupImage = 11;					//群图片消息
	core.GroupSecretImage groupSecretImage = 12;		//加密群图片消息
	core.MsgVoice voice = 13;						//二人语音消息
	core.MsgSecretVoice secretVoice = 14;			//加密二人语音消息
	core.GroupVoice groupVoice = 15;					//群语音消息
	core.GroupSecretVoice groupSecretVoice = 16;		//群加密语音消息

	//v0.4.3 版本未使用
	core.U2Map u2Map = 17;							//普通地图消息
	core.U2SecretMap u2SecretMap = 18;				//加密地图消息
	core.GroupMap groupMap = 19;						//群地图
	core.GroupSecretMap groupSecretMap= 20;			//群加密地图

	core.U2MsgNotice u2MsgNotice= 21;				//二人消息通知
	core.GroupMsgNotice groupMsgNotice = 22;			//群消息通知

	core.U2Recall u2Recall = 23;						//二人召回消息
	core.GroupRecall groupRecall = 24;				//群组召回消息

	core.U2Web u2Web = 25;							//为人Web消息
	core.GroupWeb groupWeb = 26;						//群组web消息

	core.U2WebNotice u2WebNotice = 27;				//二人web通知消息
	core.GroupWebNotice groupWebNotice = 28;			//群组web通知消息
}

message ImStcMessageResponse {

}
